# ucstrcase

./: .gitignore  .tables.json  CMakeLists.txt  LICENSE  README.md  vcpkg.json
cmake/: Config.cmake.in  Config.pc.in  FindICU.cmake
include/: compose.h  constants.h  decode.h  lookup.h  normalize.h  normalize.hpp  ucstrcase.h
install/lib/cmake/ucstrcase/: ucstrcase-targets-release.cmake  ucstrcase-targets.cmake  ucstrcaseConfig.cmake
install/lib/pkgconfig/: ucstrcase.pc
internal/: CMakeLists.txt  unicode.py
ports/ucstrcase/: portfile.cmake  vcpkg.json
simdutf-wrapper/: CMakeLists.txt
simdutf-wrapper/include/: simdutf-wrapper.h
simdutf-wrapper/src/: simdutf-wrapper.cpp
src/: compose.c  data.c  data.h  decode.c  lookup.c  normalize.c  normtables.c  normtables.h  pragmas.h  ucstrcase.c
test/: CMakeLists.txt  bench.cpp  crun_norm_tests.c  normalization_tests.c  normalization_tests.h  normalization_tests.inl  run_norm_tests.cpp  test_stuff.cpp  test_stuff.h  testthingy.c
